--- a/vignettes/test-models.Rmd
+++ b/vignettes/test-models.Rmd
@@ -10,4 +10,6 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-- Cross validation with new data - both scaled & unscaled values
+_In the works..._
+
+- Validate models with new data - visualise both scaled & unscaled values
